# volunteer

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
scheduling/: __init__.py  domain.py  generator.py  scheduling_domain.py
tests/: __init__.py  conftest.py  constants.py  data_generator.py  test_algorithm_correctness.py  test_builders.py  test_performance.py
tests/scheduling/: __init__.py  builders.py  test_assignment.py  test_full_scale.py  test_generator.py  test_performance.py
