[project]
name = "volunteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyrefly>=0.30.0",
    "pytest>=8.4.1",
    "pytest-durations>=1.6.0",
    "ruff>=0.12.10",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S311"]
"tests/*.py" = ["S101", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"
