[project]
name = "volunteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyrefly>=0.30.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-durations>=1.6.0",
    "ruff>=0.12.10",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S311"]
"tests/*.py" = ["S101", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-v -W error --cov=. --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*",
    "*/.venv/*",
    "*/venv/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_no_return = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
